Feature/office locations (#78)
* Prepare draw.io library with workplace shapes to design office location maps
* Upload map to HR Easy, assign to office location
* Assign employee to workplace and show him on the map
* Add office entity to group office locations